--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head> 
 <title>Trillium Media Design</title> 
 <meta charset="utf-8"> 
-<link rel="stylesheet" type="text/css" href="color.css">
+<link rel="stylesheet" type="text/css" href="Color.css">
 </head> 
 <body> 
 <div> 
