--- a/index.html
+++ b/index.html
@@ -1,50 +1,107 @@
-
-<!DOCTYPE html> 
-<html lang="en"> 
-<head> 
-<title>Trillium Media Design</title> 
-<meta charset="utf-8"> 
-<link rel="stylesheet" type="text/css" href="Color.css">
-</head> 
-<body> 
-<div> 
-<header>
-<hgroup>
- <h1 id="header1">Trillium Media Design</h1>  <h2> Slogan </h2>
- </hgroup>
-</header> <nav>
-<a href="index.html" class="navi">Home</a> &nbsp;
-<a href="services.html" class="navi">Services</a> &nbsp; 
-<a href="contact.html" class="navi">Contact</a>
-</nav> 
-<div>  
-<h3>New Media and Web Design</h3>  
-<p>Trillium Media Design will bring your company&rsquo;s Web presence to the next level.
-<br>  
-We offer a comprehensive range of services:  
-</p>   
-<ul>     
-	<li>Website Design</li>     
-	<li>Interactive Animation</li>     
-	<li>E-Commerce Solutions</li>     
-	<li>Usability Studies</li>     
-	<li>Search Engine Optimization</li>   
-</ul>   
-<h3>Meeting Your Business Needs</h3>   
-<p>Our expert designers are creative and eager to work with you.</p> 
-</div> 
-<footer>
-<p>
-<small>   Copyright &copy; 2014 Your Name Here. </small>
-<p id="validation">
-    <a href="http://jigsaw.w3.org/css-validator/check/referer">
-        <img style="border:0;width:88px;height:31px"
-            src="http://jigsaw.w3.org/css-validator/images/vcss"
-            alt="Valid CSS!" />
-    </a>
-</p>
-</p> 
-</footer> 
-</div> 
-</body> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<title>Burlington Coffee</title>
+	<meta charset="utf-8">
+	<link href="style.css" rel="stylesheet" type="text/css">
+</head>
+<body>
+	<div class="wrapper">
+		<header>
+            <h1>Burlington<br> Coffee</h1>
+		</header>
+        <div class="flexbox">
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="beans.html">Beans</a></li>
+                    <li><a href="process.html">Process</a></li>
+                    <li><a href="drink.html">Drink</a></li>
+                    <li><a href="coffee_reviews.html">Coffee Reviews</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+            <div class="content">
+                <article>
+                <h3>What is coffee?</h3>
+                <p>
+                    &#9;Coffee is a brewed beverage prepared from the roasted or baked seeds of several species of an evergreen shrub of the genus Coffea. 
+                    The two most common sources of coffee beans are the highly regarded Coffea arabica, and the "robusta" form of the hardier Coffea canephora. 
+                    The latter is resistant to the coffee leaf rust (Hemileia vastatrix), but has a more bitter taste. 
+                    Coffee plants are cultivated in more than 70 countries, primarily in equatorial Latin America, Southeast Asia, and Africa. 
+                    Once ripe, coffee "berries" are picked, processed and dried to yield the seeds inside. 
+                    The seeds are then roasted to varying degrees, depending on the desired flavor, before being ground and brewed to create coffee.
+                </p>
+                <br>
+                <img src="coffee-art.jpg" alt="art" id="latte"><br>
+                <span id="latteQuote" class="picCaptions">
+                Coffee is art.
+                </span>
+                <br>
+                <img src="coffee-smell.jpg" alt="smell" id="steamCup"><br>
+                <span id="steamCupQuote" class="picCaptions">
+                Coffee is a smell.
+                </span>
+                <br>
+                <img src="coffee-beans.jpg" alt="beans" id="beanCup"><br>
+                <span id="beansQuote" class="picCaptions">
+                Coffee is a bean.
+                </span>
+                <br>
+                <img src="coffee-life.jpg" alt="life" id="quote"><br>
+                <span id="quoteQuote" class="picCaptions">
+                Coffee is life.
+                </span>
+            </div>
+            <aside>
+                                <h2>Coffee Reviews</h2>
+                <img src="mag.jpg" alt="cafe">
+                <a href="http://www.yelp.com/biz/maglianero-burlington-2">Maglianero's</a>
+                    <p>
+                        Best coffee in Vermont so far. I had the hazelnut iced latte on a hot day and it was simply delicious. 
+                        Coconut macaroon was also delectable. Maglianero offers a wide range of pastries, coffees and teas. 
+                        I also discovered an amazing sparkling water, Saratoga.
+                        <br>
+                        Laid-back ambiance, modern / loft architecture and good music are just perfect. 
+                        You can even park your bike inside the coffee shop.
+                    </p>
+                    <hr>
+                <img src="muddywaters.jpg" alt="muddy waters">
+                <a href="http://www.yelp.com/biz/muddy-waters-burlington">Muddy Water's</a>
+                <p>
+                    It's the atmosphere of Muddy Waters that really makes this coffee shop unique. If walking into a warm, wood cabin makes you feel good, you will undoubtedly love the aura of this place. 
+                </p>
+                <p>
+                    Have a craving for quality coffee or fruit/vegetable juices?  Look no further: Muddy Waters has it. They even have beer on tap. That's pretty awesome. 
+                </p>
+                <p>
+                The staff members are friendly and down-to-earth. You won't likely find an unkind person working here.
+                </p>
+                <hr>
+                <img src="august.jpg" alt="august">
+                <a href="http://www.yelp.com/biz/august-first-bakery-and-cafe-burlington-2">August First Bakery &amp; Cafe's</a>
+                <p>
+                    Beautiful cafe with friendly and patient service. The exposed brick and garage type doors add to the comfortable atmosphere. I had a delicious cup of espresso.
+                </p>
+            </aside>
+        </div>
+		<footer>
+			<div class="directory">
+				<ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="beans.html">Beans</a></li>
+                    <li><a href="process.html">Process</a></li>
+                    <li><a href="drink.html">Drink</a></li>
+                    <li><a href="coffee_reviews.html">Coffee Reviews</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="sources.html">Sources</a></li>
+			     </ul>
+			</div>
+			<br>
+			Copyright 2014. All rights reserved.
+		</footer>
+	</div>
+</body>
 </html>
