--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li><a href="beans.html">Beans</a></li>
                     <li><a href="process.html">Process</a></li>
                     <li><a href="drink.html">Drink</a></li>
-                    <li><a href="coffee_reviews.html">Coffee Reviews</a></li>
+                    <li><a href="coffee_reviews.html">Reviews</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
@@ -88,15 +88,15 @@
         </div>
 		<footer>
 			<div class="directory">
-				<ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="beans.html">Beans</a></li>
-                    <li><a href="process.html">Process</a></li>
-                    <li><a href="drink.html">Drink</a></li>
-                    <li><a href="coffee_reviews.html">Coffee Reviews</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a href="sources.html">Sources</a></li>
+				<ul id="botNav">
+                    <li class="botLi"><a href="index.html">Home</a></li>
+                    <li class="botLi"><a href="about.html">About</a></li>
+                    <li class="botLi"><a href="beans.html">Beans</a></li>
+                    <li class="botLi"><a href="process.html">Process</a></li>
+                    <li class="botLi"><a href="drink.html">Drink</a></li>
+                    <li class="botLi"><a href="coffee_reviews.html">Reviews</a></li>
+                    <li class="botLi"><a href="contact.html">Contact</a></li>
+                    <li class="botLi"><a href="sources.html">Sources</a></li>
 			     </ul>
 			</div>
 			<br>
