--- a/drink.html
+++ b/drink.html
@@ -23,7 +23,7 @@ Jack and Patrick
                     <li><a href="beans.html">Beans</a></li>
                     <li><a href="process.html">Process</a></li>
                     <li><a href="drink.html">Drink</a></li>
-                    <li><a href="coffee_reviews.html">Coffee Reviews</a></li>
+                    <li><a href="coffee_reviews.html">Reviews</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
@@ -104,7 +104,7 @@ Espresso is the foundation for a wide variety of specialty coffee drinks, such a
                     <li><a href="beans.html">Beans</a></li>
                     <li><a href="process.html">Process</a></li>
                     <li><a href="drink.html">Drink</a></li>
-                    <li><a href="coffee_reviews.html">Coffee Reviews</a></li>
+                    <li><a href="coffee_reviews.html">Reviews</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="sources.html">Sources</a></li>
 			     </ul>
