Directory List Update
Fixed list orientation for the bottom directory list.

--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
         </div>
 		<footer>
 			<div class="directory">
-				<ul>
+				<ul class="botnav">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="beans.html">Beans</a></li>
