--- a/process.html
+++ b/process.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!--
 Coffee Homepage
 Final
@@ -115,7 +115,7 @@ Jack and Patrick
         </div>
 		<footer>
 			<div class="directory">
-				<ul>
+				<ul class="botnav">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="beans.html">Beans</a></li>
