--- a/drink.html
+++ b/drink.html
@@ -98,7 +98,7 @@ Espresso is the foundation for a wide variety of specialty coffee drinks, such a
         </div>
 		<footer>
 			<div class="directory">
-				<ul>
+				<ul class="botnav">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="beans.html">Beans</a></li>
