--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
 		<footer>
 			<div class="directory">
-				<ul id="botNav">
+				<ul class="botnav">
                     <li class="botLi"><a href="index.html">Home</a></li>
                     <li class="botLi"><a href="about.html">About</a></li>
                     <li class="botLi"><a href="beans.html">Beans</a></li>
