removed files from old site
Beginning the rebuilding process.

--- a/coffee_reviews.html
+++ b/coffee_reviews.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <!--
-Coffee Homepage
-Final
-Jack and Patrick
+Jack Houk 2016
 -->
 <html lang="en">
 <head>
-	<title>Burlington Coffee</title>
+	<title>Jack Houk Software</title>
 	<meta charset="utf-8">
 	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<div class="wrapper">
 		<header>
-			<h1>Burlington Coffee</h1>
+			<h1>example header</h1>
 		</header>
         <div class="flexbox">
             <nav>
@@ -28,72 +26,10 @@ Jack and Patrick
                 </ul>
             </nav>
             <div class="content">
-                <h2 id="reviewHeader">Coffee Reviews</h2>
-                <hr>
-                <h3><a href="http://www.yelp.com/biz/maglianero-burlington-2">Maglianero's</a></h3>
-                <img src="mag.jpg" alt="cafe">
-                    <p>
-                        Best coffee in Vermont so far. I had the hazelnut iced latte on a hot day and it was simply delicious. 
-                        Coconut macaroon was also delectable. Maglianero offers a wide range of pastries, coffees and teas. 
-                        I also discovered an amazing sparkling water, Saratoga.
-                        <br>
-                        Laid-back ambiance, modern / loft architecture and good music are just perfect. 
-                        You can even park your bike inside the coffee shop.
-                    </p>
-                    <h3><a href="http://www.yelp.com/biz/muddy-waters-burlington">Muddy Water's</a></h3>
-                <img src="muddywaters.jpg" alt="muddy waters">
-                
-                <p>
-                    It's the atmosphere of Muddy Waters that really makes this coffee shop unique. If walking into a warm, wood cabin makes you feel good, you will undoubtedly love the aura of this place. 
-                </p>
-                <p>
-                    Have a craving for quality coffee or fruit/vegetable juices?  Look no further: Muddy Waters has it. They even have beer on tap. That's pretty awesome. 
-                </p>
-                <p>
-                The staff members are friendly and down-to-earth. You won't likely find an unkind person working here.
-                </p>
-                <h3><a href="http://www.yelp.com/biz/august-first-bakery-and-cafe-burlington-2">August First Bakery &amp; Cafe</a></h3>
-                <img src="august.jpg" alt="august">
-                <p>
-                    Beautiful cafe with friendly and patient service. The exposed brick and garage type doors add to the comfortable atmosphere. I had a delicious cup of espresso.
-                </p>
+                <h1>Here is some content</h1>
             </div>
             <aside>
-                <h2>Drink</h2>
-                <h3>Espresso</h3>
-                <img src="espresso.jpeg" alt="espresso">
-                <p>
-                    Espresso is a strong black coffee made by forcing steam through dark-roast aromatic coffee beans at high pressure in an espresso machine. A perfectly brewed espresso will have a thick, golden-brown crema (foam) on the surface. If the crema is good, the sugar you add will float on the surface for a couple of seconds before slowly sinking to the bottom.
-Espresso is the foundation for a wide variety of specialty coffee drinks, such as the cappuccino, but many aficionados and purists insist that adding anything (besides a bit of sugar) is blasphemy, akin to Scotch lovers mixing their single malt with Coke.
-                </p>
-                <h3>Cappuccino</h3>
-                <img src="cappuccino.jpg" alt="cappucino">
-                <p>
-                    This hugely popular coffee drink has become a staple that even the most common of corner coffee shops carries (or at least a version of it). A true cappuccino is a combination of equal parts espresso, steamed milk and milk froth. This luxurious drink, if made properly, can double as a dessert with its complex flavors and richness.
-                </p>
-                <h3>Americano</h3>
-                <img src="americano.jpg" alt="americano">
-                <p>
-                An Americano is a single shot of espresso added to a cup of hot water. The name is thought to have originated as a bit of an insult to Americans, who had to dilute their espresso when it first gained popularity on this side of the pond. Many coffee houses have perfected it, however, and the result has become a creamy, rich espresso-based coffee that you can sip and savor before jumping on your Vespa and heading to the soccer field.
-                </p>
-                <h3>Caffe Latte</h3>
-                <img src="caffe-latte.jpg" alt="caffe latte">
-                <p>
-                A caffe latte is a single shot of espresso to three parts of steamed milk.
-                </p>
-                <h3>Caf au Lait</h3>
-                <p>
-                This traditional French drink is similar to a caffe latte except that it is made with brewed coffee instead of espresso, in a 1:1 ratio with steamed milk. It is considered a weaker form of caffe latte.
-                </p>
-
-                <h3>Caf Mocha (Mochachino)</h3>
-                <p>This is a cappuccino or a caffe latte with chocolate syrup or powder added. There can be wide variations in exactly how this is prepared, so ask your coffee house how they do it before you order.
-                </p>
-                <h3>Caramel Macchiato</h3>
-                <img src="caramel-macchiato.jpg" alt="caramel macchiato">
-                <p>
-                    This is another variation that is prepared in a number of ways by different coffee houses. The most common method is combining espresso, caramel and foamed milk, though some use steamed milk. Often, vanilla is added to provide extra flavor.
-                </p>
+                <h3> here is some aside content</h3>
             </aside>
         </div>
 		<footer>
@@ -108,9 +44,7 @@ Espresso is the foundation for a wide variety of specialty coffee drinks, such a
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="sources.html">Sources</a></li>
 			     </ul>
-			</div>
-			<br>
-			Copyright 2014. All rights reserved.
+                        </div>
 		</footer>
 	</div>
 </body>
