--- a/sources.html
+++ b/sources.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
+<!--
+Jack Houk 2016
+-->
 <html lang="en">
 <head>
-	<title>Burlington Coffee</title>
+	<title>Jack Houk Software</title>
 	<meta charset="utf-8">
 	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<div class="wrapper">
 		<header>
-			<h1>Burlington<br> Coffee</h1>
+			<h1>example header</h1>
 		</header>
         <div class="flexbox">
             <nav>
@@ -23,40 +26,10 @@
                 </ul>
             </nav>
             <div class="content">
-                <h2>Sources</h2>
-                <p>"7 Popular Types Of Coffee." Ask Men. N.p., n.d. Web. 29 Nov. 2014.</p>
-                <p>"Main Page." Wikipedia. Wikimedia Foundation, 29 Nov. 2014. Web. 29 Nov. 2014.</p>
+                <h1>Here is some content</h1>
             </div>
             <aside>
-                                <h2>Coffee Reviews</h2>
-                <img src="mag.jpg" alt="cafe">
-                <a href="http://www.yelp.com/biz/maglianero-burlington-2">Maglianero's</a>
-                    <p>
-                        Best coffee in Vermont so far. I had the hazelnut iced latte on a hot day and it was simply delicious. 
-                        Coconut macaroon was also delectable. Maglianero offers a wide range of pastries, coffees and teas. 
-                        I also discovered an amazing sparkling water, Saratoga.
-                        <br>
-                        Laid-back ambiance, modern / loft architecture and good music are just perfect. 
-                        You can even park your bike inside the coffee shop.
-                    </p>
-                    <hr>
-                <img src="muddywaters.jpg" alt="muddy waters">
-                <a href="http://www.yelp.com/biz/muddy-waters-burlington">Muddy Water's</a>
-                <p>
-                    It's the atmosphere of Muddy Waters that really makes this coffee shop unique. If walking into a warm, wood cabin makes you feel good, you will undoubtedly love the aura of this place. 
-                </p>
-                <p>
-                    Have a craving for quality coffee or fruit/vegetable juices?  Look no further: Muddy Waters has it. They even have beer on tap. That's pretty awesome. 
-                </p>
-                <p>
-                The staff members are friendly and down-to-earth. You won't likely find an unkind person working here.
-                </p>
-                <hr>
-                <img src="august.jpg" alt="august">
-                <a href="http://www.yelp.com/biz/august-first-bakery-and-cafe-burlington-2">August First Bakery &amp; Cafe's</a>
-                <p>
-                    Beautiful cafe with friendly and patient service. The exposed brick and garage type doors add to the comfortable atmosphere. I had a delicious cup of espresso.
-                </p>
+                <h3> here is some aside content</h3>
             </aside>
         </div>
 		<footer>
@@ -71,9 +44,7 @@
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="sources.html">Sources</a></li>
 			     </ul>
-			</div>
-			<br>
-			Copyright 2014. All rights reserved.
+                        </div>
 		</footer>
 	</div>
 </body>
