created test page to see if it is hosted correctly

--- a/index.html
+++ b/index.html
@@ -9,43 +9,6 @@ Jack Houk 2016
 	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-	<div class="wrapper">
-		<header>
-			<h1>example header</h1>
-		</header>
-        <div class="flexbox">
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="beans.html">Beans</a></li>
-                    <li><a href="process.html">Process</a></li>
-                    <li><a href="drink.html">Drink</a></li>
-                    <li><a href="coffee_reviews.html">Reviews</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
-            <div class="content">
-                <h1>Here is some content</h1>
-            </div>
-            <aside>
-                <h3> here is some aside content</h3>
-            </aside>
-        </div>
-		<footer>
-			<div class="directory">
-				<ul class="botnav">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="beans.html">Beans</a></li>
-                    <li><a href="process.html">Process</a></li>
-                    <li><a href="drink.html">Drink</a></li>
-                    <li><a href="coffee_reviews.html">Reviews</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a href="sources.html">Sources</a></li>
-			     </ul>
-                        </div>
-		</footer>
-	</div>
+	does this work?
 </body>
 </html>
