--- a/404.html
+++ b/404.html
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
 <!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
+Jack Houk 2016
 -->
----
-permalink: /404.html
----
 <html>
     <head>
         <title>404-Page</title>
