--- a/404.html
+++ b/404.html
@@ -7,8 +7,16 @@ Jack Houk 2016
         <title>404-Page</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="style.css" rel="stylesheet" type="text/css">
     </head>
-    <body>
-        <div>Error page not found <br> Would you like to go <a href="index.html">home?</a><br>Or stay a while?</div>
+    <body id="body404">
+            <div id="bg404">
+                <img id="bgImg404" src="images/404bg.jpg" alt=""/>
+                <span id="Msg404">
+                    The page could not be found<br> 
+                    So we brought you this instead.<br>
+                    Click here to return to the <a href="index.html" id="Link404">homepage</a>
+                </span>
+            </div>
     </body>
 </html>
